# Deafine

./: .gitignore  API_FIX.md  API_USAGE.md  CHANGELOG.md  Dockerfile  INSTALL.md  LICENSE  PROJECT.md  README.md  USAGE.md  VAD_INFO.md  docker-compose.yml  env.template  pyproject.toml  quickstart.bat  quickstart.sh  requirements.txt  setup.py  test_installation.py
audio_access/: __init__.py  api.py  cli.py  config.py  console_ui.py  elevenlabs.py  events.py  recorder.py
deafine/: api.py  audio_capture.py  cli.py  config.py  console_ui.py  elevenlabs.py  main.py  summarization.py
