[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deafine"
version = "0.2.1"
description = "Real-time multi-speaker transcription using ElevenLabs API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "soundfile>=0.12.1",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
]

[project.scripts]
deafine = "deafine.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["deafine*"]
