[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audio-access"
version = "0.2.1"
description = "Real-time audio transcription for deaf and hard-of-hearing users"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "soundfile>=0.12.1",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.35",
    "fastapi>=0.121.1",
    "uvicorn[standard]>=0.38.0",
    "python-multipart>=0.0.20",
    "scipy>=1.13.1",
]

[project.scripts]
audio-access = "audio_access.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["audio_access*"]
